--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Show</th>
       <th>Number</th>
       <th>Season</th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
     <% @episodes.each do |episode| %>
       <tr>
         <td><%= episode.title %></td>
+        <td><%= episode.show.title %></td>
         <td><%= episode.number %></td>
         <td><%= episode.season %></td>
         <td><%= link_to 'Show', episode %></td>
