--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,14 +1,17 @@
+<% content_for(:title, "Is #{@show.title} on tonight?".html_safe)%>
+
 <p id="notice"><%= notice %></p>
 
 <h1>
-  <%= @show.title %>
+  <small class="text-muted">Is</small> <%= @show.title %> <small class="text-muted">on tonight?</small>
 </h1>
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Title</th>
-      <th>Number</th>
+      <th>Date</th>
       <th>Season</th>
+      <th>Episode</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +19,10 @@
   <tbody>
     <% @show.episodes.each do |episode| %>
       <tr>
-        <td><%= episode.title %></td>
-        <td><%= episode.number %></td>
+        <td><%= link_to episode.title, episode %></td>
+        <td><%= episode.air_date.strftime("%F") %></td>
         <td><%= episode.season %></td>
+        <td><%= episode.number %></td>
         <td><%= link_to 'Show', episode %></td>
         <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
         <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
