--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -5,7 +5,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Show</th>
       <th colspan="3"></th>
     </tr>
   </thead>
