--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, "Is #{@show.title} on tonight?".html_safe)%>
+<% content_for(:title, "Is #{@show.title} on tonight?".html_safe) %>
 
 <p id="notice"><%= notice %></p>
 
@@ -19,8 +19,8 @@
   <tbody>
     <% @show.episodes.each do |episode| %>
       <tr>
-        <td><%= link_to episode.title, episode %></td>
-        <td><%= episode.air_date.strftime("%F") %></td>
+        <td>"<%= link_to episode.title, episode %>"</td>
+        <td><%= episode.air_date.strftime("%A, %B %d, %Y") %></td>
         <td><%= episode.season %></td>
         <td><%= episode.number %></td>
         <td><%= link_to 'Show', episode %></td>
