--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -12,7 +12,6 @@
       <th>Date</th>
       <th>Season</th>
       <th>Episode</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -23,14 +22,11 @@
         <td><%= episode.air_date.strftime("%A, %B %d, %Y") %></td>
         <td><%= episode.season %></td>
         <td><%= episode.number %></td>
-        <td><%= link_to 'Show', episode %></td>
-        <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
-        <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 
-<%= link_to 'Edit', edit_show_path(@show) %> |
-<%= link_to 'Back', shows_path %>
+
+<%= link_to 'Back', '/' %>
