--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -18,7 +18,7 @@
 <p>
   More info:
   <% if @episode.tvdb_id %>
-    <a href="https://trakt.tv/search/tvdb?utf8=%E2%9C%93&query=<%= @episode.tvdb_id %>">Trakt</a>
+    <a href="https://trakt.tv/search/tvdb?utf8=%E2%9C%93&query=<%= @episode.tvdb_id %>" target="_blank">Trakt</a>
   <% end %>
 </p>
 
