--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -16,18 +16,11 @@
   <tbody>
     <% @episodes.each do |episode| %>
       <tr>
-        <td><%= episode.title %></td>
+        <td><%= link_to episode.title, show_episode_path(episode.show, episode) %></td>
         <td><%= episode.show.title %></td>
-        <td><%= episode.number %></td>
         <td><%= episode.season %></td>
-        <td><%= link_to 'Show', episode %></td>
-        <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
-        <td><%= link_to 'Destroy', episode, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= episode.number %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Episode', new_episode_path %>
