--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,25 +1,26 @@
-<% content_for(:title, "Is '#{@episode.title}' of #{@episode.show.title} on tonight?".html_safe)%>
+<% content_for(:title, "Is '#{@episode.title}' from #{@episode.show.title} on tonight?".html_safe)%>
 
 <p id="notice"><%= notice %></p>
 
-
-<h1>
-  <small class="text-muted">Is </small> "<%= @episode.title %>" <small class="text-muted">from</small> <%= @episode.show.title %> <small class="text-muted">on tonight?</small>
-</h1>
-
-<p class="lead">
-  Season <%= @episode.season %>, Episode <%= @episode.number %>
-</p>
-
-<div class="jumbotron">
-  <h1 class=""><%= @episode.air_date.strftime("%A, %B %d, %Y") %></h1>
-</div>
-
-<p>
+<div class="" style="text-align:center">
+  <h1>
+    <small class="text-muted">Is </small> "<%= @episode.title %>" <small class="text-muted">from</small> <%= link_to @episode.show.title, show_path(@episode.show) %><small class="text-muted"> on tonight?</small>
+  <% if @episode.air_date == Date.today %>
+    <span style="color: green">YES</span>
+  <% else %>
+    <span style="color: red">NO</span>
+  <% end %>
+  </h1>
+  <p class="lead">
+    Season <%= @episode.season %>, Episode <%= @episode.number %>
+    <br/>
+    Airs <%= @episode.air_date.strftime("%A, %B %d, %Y") %>
+    <br />
   More info:
   <% if @episode.tvdb_id %>
     <a href="https://trakt.tv/search/tvdb?utf8=%E2%9C%93&query=<%= @episode.tvdb_id %>" target="_blank">Trakt</a>
   <% end %>
-</p>
+  </p>
+</div>
 
 <%= link_to 'Back', show_path(@episode.show) %>
