--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
  */
 
 @import "bootstrap";
+
+.margin-top-25 { margin-top: 25px; }
+.centered { text-align: center; }
+.green { color: green; }
+.red { color: red; }
