--- a/app/views/shows/tonight.html.erb
+++ b/app/views/shows/tonight.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>TV shows on tonight</h1>
+<h1 class="centered">Shows on tonight <small><%= Time.now.strftime("%A, %B %d, %Y") %></small></h1>
 
 <table class="table table-hover">
   <thead>
