--- a/app/views/shows/tonight.html.erb
+++ b/app/views/shows/tonight.html.erb
@@ -2,7 +2,8 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1 class="centered">Shows on tonight <small><%= Time.now.strftime("%A, %B %d, %Y %l:%M %p") %></small></h1>
+<h1 class="centered">Shows on tonight</h1>
+<h2 class="centered"><small>Current time: <%= Time.now.strftime("%l:%M %p %A, %B %d, %Y") %></small></h2>
 
 <table class="table table-hover">
   <thead>
