--- a/app/views/shows/tonight.html.erb
+++ b/app/views/shows/tonight.html.erb
@@ -3,7 +3,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="centered">Shows on tonight <small><%= Time.now.strftime("%A, %B %d, %Y") %></small></h1>
-<!-- <h1 class="centered"><small><%= Time.now.strftime("%l:%M %p") %></small></h1> -->
+<!-- <h1 class="centered"><small><%= Time.now.strftime("%l:%M %p %A, %B %d, %Y") %></small></h1> -->
 
 
 <table class="table table-hover">
