Fix date logic on episode page. Change seeding to date.current instead of date.today

--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -6,7 +6,7 @@
   <h1>
     <small class="text-muted">Is </small> "<%= @episode.title %>" <small class="text-muted">from</small> <%= link_to @episode.show.title, show_path(@episode.show) %><small class="text-muted"> on tonight?</small>
 
-  <% if @episode.air_date == Date.today %>
+  <% if @episode.air_date.to_date == Date.current %>
     <span class="green">YES</span>
   <% else %>
     <span class="red">NO</span>
