--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -7,7 +7,7 @@
   <% if @episodes.empty? %>
     <span style='color:red'>NO</span>
   <% else %>
-    <% if @episodes.first.air_date.to_date == Date.current %>
+    <% if @episodes.first.air_date.to_date == Date.today %>
       <span style='color:green'>YES</span>
     <% else %>
       <span style='color:red'>No</span>
@@ -32,7 +32,7 @@
 
     <tbody>
       <% @episodes.each do |episode| %>
-        <% if episode.air_date.to_date == Date.current %>
+        <% if episode.air_date.to_date == Date.today %>
           <tr class="table-success">
         <% else %>
           <tr class="">
